   now logged. Suggested by Padraic. [MG]
 * Translation fixes by Stoko.
 * round(4.5,0) behaved differently on Penn than it did on MUX, and
   inconsistantly with rounding to more places on Penn. [SW]
 * The 'On for' and 'Idle' time fields in WHO are smarter and won't overflow
   their space. Suggested by Ari and Paige. [SW]   

Fixes:
 * Reordered some checks in tz.c to compile on more distributions. Problem
   reported by Zen@M*U*SH. [MG]
 * Setting an exit Transparent didn't cause its destination's desc to get
   shown as it should have. [MG]
 * It became impossible in p1 to give a delimiter to wrap() without also
   specifying a first line width. wrap(%0,%1,,%2) will now use the
   normal <width> arg for first line width, the same as wrap(%0,%1) does.
   Reported by Kitai. [MG]
 * Free PCRE-allocated memory with pcre_free() instead of free(). Reported
   by ChaosMageX@M*U*S*H. [DC]            
 * Fix some potential memory leaks in timezone file reading code. [SW]

Version 1.8.5 patchlevel 1                                 May 15, 2012

Hardcode:
 * The local_data_clone() function now receives an additional argument,
   which specifies whether @clone/preserve was used. You'll need to either
   update the definition of local_data_clone in src/local.c from the one in 
   src/local.dst or, if you've made no changes to src/local.c, just remove
   src/local.c and it'll be rebuilt automatically. [MG]
 * The orator variable (defined in game.c), for tracking the last object
   which made sound, has been deprecated, and may soon be removed; don't use
   it. Just pass the correct dbrefs to the notify*() functions if something 
   talks. [MG]
 * Several of the notify_*() family of functions, and the do_*emit()
   functions now take an extra arg, for properly tracking both the executor
   and the speaker when spoofing (@pemit/spoof, etc). [MG]

Deprecation:
 * @emit/room and @doing/header have been deprecated. Use @lemit and @poll,
   respectively, instead. [MG]
