@@ -63,6 +63,7 @@ Minor changes:
    inconsistantly with rounding to more places on Penn. [SW]
  * The 'On for' and 'Idle' time fields in WHO are smarter and won't overflow
    their space. Suggested by Ari and Paige. [SW]   
+ * Add a few new test cases. Requested by Sketch. [MG]
 
 Fixes:
  * Reordered some checks in tz.c to compile on more distributions. Problem
